--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,187 @@
 /* 🎓 تحت هذا التعليق أتحفونا بتصاميمكم التي تليق بقدر حاسبة الدرجات */
+html, body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    background-color: #f1f3f8;
+   }
+
+   .full-height {
+       height: 100%;
+     }
+   table, td, th {
+     border: 2px solid black;
+     text-align: center;
+     margin-left: 25%;
+     background-color: #8d93ab;
+   }
+   
+   table {
+     border-collapse: collapse;
+     width: 50%;
+   }
+   
+   td {
+     height: 50px;
+     vertical-align: middle;
+   }
+   .innputt{
+       padding: 0%;
+   }
+   .inputa{
+     margin-left: 35%;
+     width: 400px;
+     height: 40px;
+     border-radius: 5px;
+   }
+   .btn{
+     margin-left: 37%;
+     width: 370px;
+     height: 40px;
+     background-color: white;
+     border-radius: 5px;
+   }
+   .text{
+    margin-left: 50%;
+   }
+   @media screen and (max-width: 400px) {
+    table, .inputa , .inputa .btn{
+      width: 100%;
+      margin-top: 0;
+    }
+  }
+  body {
+    font: normal 16px Helvetica, Verdana;
+    color: #333; 
+    }
+   h1 {
+        font-family: "Courier New"; 
+        color: white;
+        }
+   p {
+        font-weight: bold;
+        color: white;
+         }
+   .directions { 
+       display: block;
+        margin-bottom: 10px; 
+        font-size: 80%; 
+        color: white;
+        }
+   .wrapper { 
+       width: 50%;
+        min-width: 300px;
+         background:#8d93ab;
+          text-align: center;
+           padding: 20px;
+            margin: 0 auto;
+             box-shadow: 0 1px 1px rgba(0,0,0,0.15), 0 10px 0 -5px#8d93ab, 0 10px 1px -4px rgba(0,0,0,0.15), 0 20px 0 -10px #8d93ab, 0 20px 1px -9px rgba(0,0,0,0.15);
+              }
+   #grades, #avg_grades {
+        font: normal 20px "Courier New";
+        color: white;
+         }
+   #final_grade {
+        font: bold 72px Helvetica, Verdana;
+        
+         }
+   .green {
+        color: green;
+         }
+   .teal {
+        color: teal;
+         }
+   .blue { 
+       color: blue; 
+       }
+   .orange { 
+       color: orange;
+        }
+   .red { 
+       color: red; 
+       }
+    .botn{
+           width: 200px;
+           height: 30px;
+           font-size: 20px; 
+           color: white;
+          border-radius: 4px;
+           background-color: #393b44;
+       }
+       img {
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        padding: 5px;
+        width: 150px;
+        margin-left: 3%;
+        margin-top: -14%;
+      }
+      .blog-footer {
+        padding: 2.5rem 0;
+      
+        text-align: center;
+        background-color: #f9f9f9;
+        border-top: .05rem solid #a8a8a828;
+        
+      }
+      .blog-footer p:last-child {
+        margin-bottom: 0;
+      }
+      .header {
+        overflow: hidden;
+        background-color: #a8a8a828;
+        padding: 20px 10px;
+      }
+      
+      .header a {
+        float: left;
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px; 
+        line-height: 25px;
+        border-radius: 4px;
+      }
+      
+      .header a.logo {
+        font-size: 25px;
+        font-weight: bold;
+      }
+      
+      .header a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+      
+      .header a.active {
+        background-color: #333;
+        color: white;
+      }
+      
+      .header-right {
+        float: right;
+      }
+      
+      @media screen and (max-width: 500px) {
+        .header a {
+          float: none;
+          display: block;
+          text-align: left;
+        }
+        
+        .header-right {
+          float: none;
+        }
+      }
+    
+    
+      
+    
+    
+      @media only screen and (max-width:500px) {
+        /* For mobile phones: */
+        body, .header, .blog-footer {
+          width: 100%;
+        }
+      }
